--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-  <h1>Hello Peter's Petitions Again</h1>
+  <h1>Hello Peter's Petitions Trevor</h1>
 </body>
 </html>
