Added craete petition page and added bootstrap js to footer in fragments and thus onto all pages

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,6 @@
     <ul>
         <li th:each="petition : ${petitions}"><p class="clickable" th:text="${petition}"></p></li>
     </ul>
+    <script th:replace="~{fragments :: footer}"></script>
 </body>
 </html>
