--- a/src/main/resources/templates/view-petition.html
+++ b/src/main/resources/templates/view-petition.html
@@ -18,5 +18,6 @@
             <input type="text" name="email">
             <input type="submit" value="submit">
         </form>
+        <script th:replace="~{fragments :: footer}"></script>
     </body>
 </html>
