--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -6,5 +6,6 @@
         <header th:replace="fragments :: header"></header>
         404 page not found.
         The resource you were looking for could not be found
+        <script th:replace="~{fragments :: footer}"></script>
     </body>
 </html>
