--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -3,7 +3,7 @@
 <head th:replace="~{fragments :: head}"></head>
 <body>
 <header th:replace="~{fragments :: header}"></header>
-<form action="/search" method="post">
+<form action="/search/result" method="post">
     <input type="text" name="search-text">
     <input type="submit" name="Search">
 </form>
