--- a/src/main/resources/templates/view-petition.html
+++ b/src/main/resources/templates/view-petition.html
@@ -5,6 +5,7 @@
         <header th:replace="~{fragments :: header}"></header>
         <h2 th:text="${petition.getTitle()}"></h2>
         <p th:unless="${petition.getSignatures().size()}">No one has signed the petition yet :(</p>
+        <p th:text="${url}"></p> <!-- testing what the uri is on the VM (see if it has "PetersPetitions/" -->
         <ul>
             <li th:each="signer : ${petition.getSignatures()}">
                 <div>
@@ -13,7 +14,7 @@
                 </div>
             </li>
         </ul>
-        <form method="post" th:action="@{/view/__${uTitle}__/add}">
+        <form method="post" th:action="@{__${uTitle}__/add}">
             <input type="text" name="name">
             <input type="text" name="email">
             <input type="submit" value="submit">
