Added in hierarchy system to ensure all links are relative path no matter if running app locally in IntelliJ or in Tomcat Docker image on server. Updated Jenkinsfile inorder to successfully archive file. Removed old comment from PetersPetitionsApplication

--- a/src/main/resources/templates/search-result.html
+++ b/src/main/resources/templates/search-result.html
@@ -5,7 +5,7 @@
 <header th:replace="~{fragments :: header}"></header>
 <ul>
     <li th:each="ePetition : ${petitions}">
-        <a th:href="@{/view/__${ePetition.getPetition().getUniqueTitle()}__}"
+        <a th:href="@{__${depth}__/view/__${ePetition.getPetition().getUniqueTitle()}__}"
            th:text="${ePetition.getPetition().getTitle()}">link</a>
     </li>
 </ul>
