--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,29 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- local style and scripts -->
-    <link rel="stylesheet" th:href="@{common/style.css}">
-    <script type="text/javascript" th:src="@{common/scripts.js}"></script>
+    <link rel="stylesheet" th:href="@{__${depth}__/common/style.css}">
+    <script type="text/javascript" th:src="@{__${depth}__/common/scripts.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-<header th:fragment="header">
-    <h1>
-        Peter's Petitions
-    </h1>
-    <nav id="primary-nav" class="navbar navbar-expand bg-body-tertiary">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav">
-                    < <li class="nav-item"><a class="nav-link" th:href="@{__${depth}__/}">home</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{__${depth}__/create}">Create</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{__${depth}__/view}">List Petitions</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{__${depth}__/search}">Search</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
-
+    <div id="content">
+        <header th:fragment="header">
+            <h1>
+                Peter's Petitions
+            </h1>
+            <nav id="primary-nav" class="navbar navbar-expand bg-body-tertiary">
+                <div class="container-fluid">
+                    <div class="collapse navbar-collapse">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" th:href="@{__${depth}__/}">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" th:href="@{__${depth}__/create}">Create</a></li>
+                            <li class="nav-item"><a class="nav-link" th:href="@{__${depth}__/view}">List Petitions</a></li>
+                            <li class="nav-item"><a class="nav-link" th:href="@{__${depth}__/search}">Search</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+    </div>
 <script th:fragment="footer" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
