--- a/src/main/resources/templates/view-petition.html
+++ b/src/main/resources/templates/view-petition.html
@@ -2,22 +2,50 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="~{fragments :: head}"></head>
     <body>
-        <header th:replace="~{fragments :: header}"></header>
-        <h2 th:text="${petition.getTitle()}"></h2>
-        <p th:unless="${petition.getSignatures().size()}">No one has signed the petition yet :(</p>
-        <ul>
-            <li th:each="signer : ${petition.getSignatures()}">
-                <div>
-                    <p th:text="${signer.getName()}"></p>
-                    <p th:text="${signer.getEmail()}"></p>
+        <div id="content" class="px-1">
+            <header th:replace="~{fragments :: header}"></header>
+            <div class="container-fluid mt-2">
+                <div class="row">
+                    <div class="col-8 " >
+                        <div class="card">
+                            <h5 class="card-header" th:text="@{__${petition.getTitle}__ - __${petition.getSignatures().size()}__ signatures}"></h5>
+                            <div class="card-body">
+                                <p class="card-text" th:text="${petition.getDescription}"></p>
+                                <p class="card-text">by <a class="btn btn-primary" th:href="@{mailto:__${petition.getAuthor().getEmail()}__}"
+                                    th:text="${petition.getAuthor().getName()}"></a></p>
+                            </div>
+                        </div>
+                        <p th:unless="${petition.getSignatures().size()}" class="mt-2">No one has signed the petition yet :(</p>
+                        <div th:each="signer : ${petition.getSignatures()}" class="card mt-2">
+                            <div class="card-header">Signer</div>
+                            <div class="card-body">
+                                <blockquote class="blockquote mb-0">
+                                    <p th:text="${signer.getName()}"></p>
+                                    <footer class="blockquote-footer" th:text="${signer.getEmail()}"></footer>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 card ">
+                        <div class="card-body">
+                            <form method="post" th:action="@{__${depth}__/view/__${uTitle}__/add}">
+                                <div class="mb-3">
+                                    <label for="name">Name</label>
+                                    <input type="text" name="name" id="name" class="form-control">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email">email</label>
+                                    <input type="text" name="email" id="email" class="form-control">
+                                </div>
+                                <div class="mb-3">
+                                    <input type="submit" value="submit" class="btn btn-success">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-            </li>
-        </ul>
-        <form method="post" th:action="@{__${depth}__/view/__${uTitle}__/add}">
-            <input type="text" name="name">
-            <input type="text" name="email">
-            <input type="submit" value="submit">
-        </form>
+            </div>
+        </div>
         <script th:replace="~{fragments :: footer}"></script>
     </body>
 </html>
