--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,7 +14,7 @@
 <body>
     <div id="content">
         <header th:fragment="header">
-            <h1>
+            <h1 class="display-2">
                 Peter's Petitions
             </h1>
             <nav id="primary-nav" class="navbar navbar-expand bg-body-tertiary">
@@ -31,6 +31,6 @@
             </nav>
         </header>
     </div>
-<script th:fragment="footer" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script th:fragment="footer" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
