--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -5,19 +5,19 @@
 <body>
     <div id="content" class="px-1">
         <header th:replace="~{fragments :: header}"></header>
-        <h5 th:unless="${petitions} and ${petitions.size()}">no petitions available at this time</h5>
-        <ul>
-            <li th:each="petition : ${petitions}">
-                <div class="clickable" data-ref="${petition.getUniqueTitle()}">
-                    <p th:text="${petition.getUniqueTitle()}"></p>
-                    <p th:text="${petition.getTitle()}"></p>
-                    <p th:text="${petition.getDescription()}"></p>
-                    <p th:text="${petition.getAuthor().getName()}"></p>
-                    <p th:text="${petition.getSignatures().size()}"></p>
-                    <a th:href="@{__${depth}__/view/__${petition.getUniqueTitle()}__}">click</a>
+        <h4>All Petitions</h4>
+
+        <h6 th:unless="${petitions} and ${petitions.size()}">no petitions available at this time</h6>
+
+            <a th:each="petition : ${petitions}" class="petition-card card mt-3" th:href="@{__${depth}__view/__${petition.getUniqueTitle()}__}" >
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${petition.getTitle()}"></h5>
+                    <h6 class="card-subtitle" th:text="@{by __${petition.getAuthor().getName()}__}"></h6>
+                    <p class="card-description"  th:text="${petition.getDescription()}"></p>
                 </div>
-            </li>
-        </ul>
+                <div class="card-footer text-body-secondary" th:text="@{__${petition.getSignatures().size()}__ signatures}"></div>
+            </a>
+
     </div>
 <script th:replace="~{fragments :: footer}"></script>
 </body>
