corrected instruction on home page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
                 Welcome to Peter's Petitions. Here you can view, sign and create your own petitions.
             </p>
             <p>
-                Use the Nav bar at the top to access site functionality.
+                Use the Nav bar or the buttons below to access site functionality.
             </p>
 
         </div>
