--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,9 @@
             <p>
                 Use the Nav bar or the buttons below to access site functionality.
             </p>
+            <p>
+                hello world
+            </p>
 
         </div>
         <div class="container-fluid">
